corrected h3 alignment in extra links section

--- a/styles/partials/_extraLinks.scss
+++ b/styles/partials/_extraLinks.scss
@@ -18,7 +18,6 @@
     }
     
     li {
-    width: calc(100% / 3);
     padding: 1rem;
     display: flex;
     flex-direction: column;
